--- a/javadrivetool/build.gradle
+++ b/javadrivetool/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 version = '1.0'
 jar {
     manifest {
@@ -14,7 +14,10 @@ repositories {
 }
 
 dependencies {
-    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+    compile 'com.google.api-client:google-api-client:1.20.0'
+    compile 'com.google.oauth-client:google-oauth-client-jetty:1.20.0'
+    compile 'com.google.apis:google-api-services-drive:v2-rev170-1.20.0'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.3'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
