--- a/javadrivetool/build.gradle
+++ b/javadrivetool/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.20.0'
     compile 'com.google.apis:google-api-services-drive:v2-rev170-1.20.0'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.3'
+    compile 'com.google.code.gson:gson:2.3.1'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
